# clippy

./: .gitignore  Cargo.toml  Dockerfile  Jenkinsfile  README.md  clippy.service  docker-compose.yml  install.sh  org.dhanu.clippy.yml
.github/workflows/: build-image.yml  release-linux.yml  release-win.yml  release.yml  relese-linux.yml  relese-mac.yml  relese-win.yml  rust.yml
Android-clippy/app/: build.gradle.kts
Android-clippy/app/src/main/: AndroidManifest.xml
Android-clippy/app/src/main/java/com/clippy/clippy/: Clipboard.kt  MainActivity.kt  Notifications.kt  Settings.kt
Android-clippy/app/src/main/java/com/clippy/clippy/ui/theme/: Type.kt
Android-clippy/app/src/main/res/drawable/: ic_launcher_monochrome.xml
Android-clippy/gradle/wrapper/: gradle-wrapper.properties
android-clippy/app/: build.gradle.kts
android-clippy/app/src/androidTest/java/com/clippy/clippy/: ExampleInstrumentedTest.kt
android-clippy/app/src/main/: AndroidManifest.xml
android-clippy/app/src/main/java/com/clippy/clippy/: Clipboard.kt  MainActivity.kt  Notifications.kt  Run.kt  RunningServ.kt  Search.kt  Settings.kt
android-clippy/app/src/main/java/com/clippy/clippy/ui/theme/: Color.kt  Theme.kt
android-clippy/app/src/main/res/drawable/: clippy.xml  ic_launcher_background.xml
android-clippy/app/src/main/res/mipmap-anydpi-v26/: ic_launcher_round.xml
android-clippy/app/src/main/res/values/: themes.xml
android-clippy/app/src/test/java/com/clippy/clippy/: ExampleUnitTest.kt
android-clippy/gradle/: libs.versions.toml
assets/: logo.kra
build-linux/: build.sh  clippy.desktop  clippy.service  install.sh
build-linux/flatpak/: clippy.desktop  org.clippy.clippy.yml
build-msi/: Folders.wxs  Package.wxs  build.ps1  clippy.wixproj  clippyARM64.wxs  clippyX64.wxs  clippyX86.wxs  cllippy.wxs  cllippy32.wxs
builld.msi/: Folders.wxs  Package.wxs  cllippy.wxs
clippy/: Cargo.toml
clippy-gui/: Cargo.toml  build.rs
clippy-gui/src/: clipboard_img_widget.rs  clipboard_widget.rs  custom_egui_widget.rs  edit_window.rs  gtk_shell.rs  http.rs  ipc.rs  lib.rs  main.rs
clippy-server/: Cargo.toml
clippy-server/credentials/users/saju_super_gay/: user.json
clippy-server/src/: db.rs  email.rs  lib.rs  main.rs  ws_connection.rs
clippy/src/: encryption_decryption.rs  http.rs  ipc.rs  lib.rs  local.rs  macros.rs  main.rs  read_clipboard.rs  user.rs  write_clipboard.rs
flatpak/: org.clippy.clippy.yml
src/: http.rs  lib.rs  main.rs  read_clipboard.rs  write_clipboard.rs
