[package]
name = "clippy"
version = "0.1.0"
edition = "2024"

[dependencies]
wl-clipboard-rs = "0.9.1"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
clipboard-rs = "0.2.4"
wayland-clipboard-listener = "0.2.6"
chrono = "0.4.40"
gtk = { version = "0.9.6", package = "gtk4", features = ["v4_16"] }
