[package]
name = "clippy"
version = "0.1.0"
edition = "2024"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
clipboard-rs = "0.2.4"
chrono = "0.4.40"
gtk = { version = "0.9.6", package = "gtk4", features = ["v4_16"] }
reqwest = { version = "0.12.15", features = ["blocking", "multipart"] }
zip = "2.5.0"
bytes = "1.10.1"

[target.'cfg(target_os = "linux")'.dependencies]
wayland-clipboard-listener = "0.2.6"
wl-clipboard-rs = "0.9.1"
