[package]
name = "clippy-gui"
version = "0.1.0"
edition = "2024"


[dependencies]
eframe = "0.31.1"
clippy = { path = "../clippy" }
egui = "0.31.1"
env_logger = "0.11.8"
reqwest = "0.12.15"
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }


[build-dependencies]
winres = "0.1"
