[package]
name = "clippy-gui"
version = "0.1.2"
edition = "2024"


[dependencies]
eframe = "0.31.1"
clippy = { path = "../clippy" }
egui = "0.31.1"
env_logger = "0.11.8"
reqwest = "0.12.15"
ipc-channel = "0.20.0"
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }

[target.'cfg(target_os = "windows")'.dependencies]
sysinfo = "0.35.1"


[build-dependencies]
winres = "0.1"
