[package]
name = "clippy-gui"
version = "0.1.5"
edition = "2024"


[dependencies]
eframe = "0.31.1"
clippy = { path = "../clippy" }
egui = "0.31.1"
env_logger = "0.11.8"
reqwest = "0.12.15"
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
log = "0.4.27"

[target.'cfg(target_os = "windows")'.dependencies]
sysinfo = "0.35.1"
interprocess = "2.2.3"

[build-dependencies]
winres = "0.1"

