[package]
name = "clippy-server"
version = "0.1.0"
edition = "2024"

[dependencies]
actix = "0.13.5"
actix-files = "0.6.6"
actix-multipart = "0.7.2"
actix-web = "4"
actix-web-actors = "4.3.1"
env_logger = "0.11.7"
futures-util = "0.3.31"
log = "0.4.27"
rand = "0.9.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.140"
uuid = { version = "1.16.0", features = ["serde", "v4"] }
zip = "2.5.0"
