[package]
name = "clippy"
version = "0.1.1"
edition = "2024"

[dependencies]
reqwest = { version = "0.12.15", features = ["default", "multipart", "json"] }
clipboard-rs = "0.2.4"
chrono = "0.4.40"
tar = "0.4.44"
bytes = "1.10.1"
env_logger = "0.11.8"
base64 = "0.22.1"
log = "0.4.27"
aes-gcm = "0.10.3"
image = "0.25.6"
once_cell = "1.21.3"
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
fs4 = "0.13.1"

[target.'cfg(target_os = "linux")'.dependencies]
wayland-clipboard-listener = "0.2.6"
wl-clipboard-rs = "0.9.1"

[target.'cfg(not(target_os = "linux"))'.dependencies]
enigo = "0.3.0"
